[BUG] align values

--- a/src/components/ZoneStatsSheet/index.scss
+++ b/src/components/ZoneStatsSheet/index.scss
@@ -27,6 +27,7 @@
 
     .value-cell {
       font-weight: 500;
+      text-align: right;
     }
   }
 
